--- a/nyc-airbnb-eda-with-python.ipynb
+++ b/nyc-airbnb-eda-with-python.ipynb
@@ -1709,7 +1709,7 @@
    "id": "8672f04f",
    "metadata": {},
    "source": [
-    "In the bar chart above, we can see that the most expensive borough is Manhattan, with an average price of \\\\$138.38. The second most expensive borough is Brooklyn, costing an average of $110.89. The prices for the three other boroughs are cheaper, with the Bronx being the most affordable one, averaging \\\\$89.46. "
+    "In the column chart above, we can see that the most expensive borough is Manhattan, with an average price of \\\\$138.38. The second most expensive borough is Brooklyn, costing an average of $110.89. The prices for the three other boroughs are cheaper, with the Bronx being the most affordable one, averaging \\\\$89.46. "
    ]
   },
   {
@@ -1772,7 +1772,7 @@
    "id": "df862137",
    "metadata": {},
    "source": [
-    "In this bar chart, the data is grouped by borough and room type. Manhattan maintains the highest prices for both entire homes and private rooms, and the average price for a shared room costs more than a private room in all the other boroughs. \n",
+    "In this column chart, the data is grouped by borough and room type. Manhattan maintains the highest prices for both entire homes and private rooms, and the average price for a shared room costs more than a private room in all the other boroughs. \n",
     "\n",
     "Considering that Manhattan and Brooklyn are likely the most popular boroughs among tourists, it makes sense that the prices are higher than in Queens, the Bronx, and Staten Island – mostly residential areas. \n",
     "\n",
